sql/field.h
@@ -1475,6 +1475,9 @@ public:
   bool save_in_field_default_value(bool view_eror_processing);
   bool save_in_field_ignore_value(bool view_error_processing);
 
+  /* Mark field in read map. Updates also virtual fields */
+  void register_field_in_read_map();
+
   friend int cre_myisam(char * name, register TABLE *form, uint options,
 			ulonglong auto_increment_value);
   friend class Copy_field;
